test/fail_compilation/fail317.d
interface I
{
    auto f()
    in{}
    out{}
}
